# toolchain-parallax_p8x32a

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  toolchain.cmake
cmake/Modules/: CMakeCOGCCompiler.cmake.in  CMakeCOGCInformation.cmake  CMakeCOGCXXCompiler.cmake.in  CMakeCOGCXXInformation.cmake  CMakeCOGCXXObjcopy.cmake  CMakeCOGObjcopy.cmake  CMakeDetermineCOGCCompiler.cmake  CMakeDetermineCOGCXXCompiler.cmake  CMakeTestCOGCCompiler.cmake  CMakeTestCOGCXXCompiler.cmake
cmake/Modules/Platform/: Generic-g++-Parallax-P8X32A.cmake  Generic-gcc-Parallax-P8X32A.cmake
cmake/modules/: CMakeCOGCXXInformation.cmake
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c++/: CMakeLists.txt
examples/c++/blink/: CMakeLists.txt  main.cc
examples/c++/blink_cog/: CMakeLists.txt  led_blinker.cogcc  led_blinker_mailbox.h  main.cc
examples/c++/hello_world/: CMakeLists.txt  main.cc
examples/c/blink/: CMakeLists.txt  main.c
examples/c/blink_cog/: CMakeLists.txt  led_blinker.cogc  led_blinker.h  led_blinker_mailbox.h  main.c
examples/c/hello_world/: CMakeLists.txt  main.c
hooks/: install  pre-commit
